<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">image</string>
    <string name="app_name">谷居</string>
    <string name="addidea">加入灵感集</string>
    <string name="myidea">我的灵感集</string>
    <string name="submit">登录</string>
    <string name="textcolor">#FFFFFFFF</string>
    <string name="email">输入邮箱</string>
    <string name="username">输入用户名</string>
    <string name="password">输入密码</string>
    <string name="register">注册登录</string>
    <string name="style">按风格浏览</string>
    <string name="space">按空间浏览</string>
    <string name="logo">logo</string>
    <string name="regSuccess">恭喜您</string>
    <string name="regInfo">注册成功！</string>
    <string name="OK">确定</string>
    <string name="subInfo">登录成功！</string>
    <string name="categoryString">分类浏览</string>
    <string name="aboutTitle">关于谷居</string>
    <string name="aboutFirst">谷居—最酷的家家装图库</string>
    <string name="aboutSecond">谷居聚焦于最酷、最时尚、最in的家居图片，为用户带来最优的网络家居体验。</string>
    <string name="aboutThird">更多功能和精彩体验持续开发中，希望喜爱家居的你能持续关注谷居网站。</string>
    <string name="website">http://www.guju.com.cn</string>
    <string name="copyright">Copyright © 谷居 \n     版本号V1.0</string>
    <string name="usernameOrEmail">输入用户名或邮箱</string>
    
</resources>