<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:contentDescription="@string/hello">
    </ViewFlipper>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignTop="@id/flipper"
        android:orientation="horizontal" >
        		 
        <Spinner
            android:id="@+id/style"
            android:layout_width="121dip"
            android:layout_height="fill_parent"
            android:text="@string/style"
            android:textColor="#9e7b5d"
            android:background="@drawable/spinner" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#ffffff" />
        
        <Spinner
            android:id="@+id/space"
            android:layout_width="121dip"
            android:layout_height="fill_parent"
            android:text="@string/space"
            android:textColor="#9e7b5d"
            android:background="@drawable/spinner" />
        
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#ffffff" />
        
        <Button
            android:id="@+id/confirmButt"
            android:layout_width="75dip"
            android:layout_height="fill_parent"
            android:background="#9e7b5d"
            android:text="@string/OK"
            android:textColor="#ffffff" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/flipper"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addidea"
            android:layout_width="159dip"
            android:layout_height="40dp"
            android:background="#9e7b5d"
            android:text="@string/addidea"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#ffffff" />

        <Button
            android:id="@+id/myidea"
            android:layout_width="159dip"
            android:layout_height="40dip"
            android:background="#9e7b5d"
            android:text="@string/myidea"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>